name:                hs-elisp
version:             0.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE.md
author:              Victor Miraldo
maintainer:          v.cacciarimiraldo@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules: Language.ELisp
                   Language.ELisp.Parser
  build-depends:       base >=4.10 && <5
               ,       text
               ,       parsec
               ,       mtl

  hs-source-dirs:      src
  default-language:    Haskell2010

